--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 .content-div:hover {
   background-image: linear-gradient(
     to right,
-    rgba(112, 157, 255, 0.8),
-    hsla(242, 74%, 61%, 0.8)
+    rgba(245, 225, 224, 0.8),
+    rgba(250, 191, 187, 0.8)
   )!important;
 }
